# cpp-projects

./: .gitignore  README.md
books-managment/include/: Book.h  FileManagment.h  Program.h
books-managment/src/: Book.cpp  FileManagment.cpp  Program.cpp  main.cpp
cinema-managment/: Cinema.cpp  Cinema.h  Seat.cpp  Seat.h  Theater.cpp  Theater.h  main  main.cpp
cinema-managment/main.dSYM/Contents/Resources/DWARF/: main
cinema-managment/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
guessing_game/: main  main.cpp
guessing_game/main.dSYM/Contents/Resources/DWARF/: main
guessing_game/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
note_manager/: main  main.cpp
note_manager/main.dSYM/Contents/Resources/DWARF/: main
note_manager/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
opengl-project/: glad.c  main.cpp
opengl-project/dependencies/include/glad/: glad.h
project_cmake/: CMakeLists.txt
project_cmake/src/: main.cpp
raylib_project/: CMakeLists.txt
raylib_project/include/: Player.h
raylib_project/src/: Player.cpp  main.cpp
rpg_adventure/: CMakeLists.txt  main.cpp
simulator-battle/include/: Battle.h  Character.h  Mage.h  Warrior.h
simulator-battle/src/: Battle.cpp  Character.cpp  main.cpp
